--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-MyMovieDBApiKey=""
+MyMovieDBApiKey="228c67fa6e2169b425902967e6208815"
