--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.okhttp:okhttp:2.7.0'
     compile 'com.github.AndroidDeveloperLB:MaterialPreferenceLibrary:5'
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
