--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,42 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="practice.maddie.popularmoviesstage2" >
+          package="practice.maddie.popularmoviesstage2">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/popular_movies"
-        android:theme="@style/Theme.AppCompat" >
-
-        <activity
-            android:name=".MainActivity"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
             android:label="@string/popular_movies"
-            android:launchMode="singleInstance">
-
+            android:theme="@style/Theme.AppCompat">
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/popular_movies"
+                android:launchMode="singleInstance">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".MovieDetailActivity"
-            android:label="@string/title_activity_movie_detail"
-            android:parentActivityName=".MainActivity"
-            android:launchMode="singleTop"
-            >
+                android:name=".MovieDetailActivity"
+                android:label="@string/title_activity_movie_detail"
+                android:launchMode="singleTop"
+                android:parentActivityName=".MainActivity">
         </activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings">
+                android:name=".SettingsActivity"
+                android:label="@string/title_activity_settings">
         </activity>
+
         <provider
-                android:authorities="practice.maddie.popularmoviesstage2"
-                android:name="practice.maddie.popularmoviesstage2.Data.FavoriteMovieProvider" />
+                android:name=".Data.FavoriteMovieProvider"
+                android:authorities="practice.maddie.popularmoviesstage2"/>
     </application>
 
 </manifest>
